--- a/simple001/simple_page_layout02.html
+++ b/simple001/simple_page_layout02.html
@@ -4,29 +4,9 @@
 	<meta charset="utf-8">
 	<title>网页简单布局02</title>
 </head>
-<body>
-	<article>
-		<header>
-			<h2>好好生活简单风</h2>
-		</header>
-		<section>
-			<p>空间上看到几分恐惧的看法</p>
-		</section>
-		<section>
-			<article>
-				<p>
-					kdjfsd
-				</p>
-				<footer>
-					sdfsldfjls
-					<time>2017</time>
-				</footer>
-			</article>
-		</section>
-		<footer>
-			
-		</footer>
-
-	</article>
-</body>
+<frameset cols="20%,60%,20%">
+		<frame src="https://www.jd.com" />
+		<frame src="https://www.taobao.com" />
+		<frame src="https://www.tmall.com" />
+	</frameset>
 </html>
